feat: limit user session
