# cmd/api/middleware/middleware.go
@@ -1,75 +1,44 @@
 package middleware
 
 import (
-	"errors"
-	"strings"
+	"fmt"
 	"super-cms/helper"
 
 	"github.com/gin-gonic/gin"
-	"github.com/go-stack/stack"
-	"github.com/golang-jwt/jwt/v5"
+	"github.com/redis/go-redis/v9"
 	"github.com/samber/lo"
 )
 
-func Authentication() gin.HandlerFunc {
+func AuthWithPermits(redis *redis.Client, permitName string) gin.HandlerFunc {
 	return func(c *gin.Context) {
-		authHeader := c.GetHeader("Authorization")
-		if len(authHeader) < 1 {
-			helper.ResUnauthorized(c, "token required")
+		accessToken, err := c.Cookie("access_token")
+		if err != nil {
+			helper.ResUnauthorized(c, "access key required")
 			return
 		}
-		authorization := strings.Split(authHeader, " ")
-		if len(authorization) <= 1 {
-			helper.ResUnauthorized(c, "malformed token")
-			return
-		}
-		jwtToken := authorization[1]
-		if err := helper.VerifyJwtToken(jwtToken); err != nil {
+		if err := helper.VerifyJwtToken(accessToken); err != nil {
 			helper.ResForbidden(c, err.Error())
 			return
 		}
-		c.Next()
-	}
-}
-
-// Strategy: We attach permit name on route then compare permits on jwt payload
-func Permit(permitName string) gin.HandlerFunc {
-	return func(c *gin.Context) {
-		authHeader := c.GetHeader("Authorization")
-		authorization := strings.Split(authHeader, " ")
-		claims := &helper.JwtPayload{}
-		if _, _, err := jwt.NewParser().ParseUnverified(authorization[1], claims); err != nil {
-			stackName := stack.Caller(0).Frame().Function
-			helper.LogErr(err, stackName)
-			helper.ResInternalServerError(c, "internal server error")
+		claims, _ := helper.ParseToken(accessToken)
+		key := fmt.Sprintf("%s%s", helper.RedisGetUserPrefix(claims.ID), accessToken)
+		token, err := redis.Get(c, key).Result()
+		if err != nil {
+			helper.ResUnauthorized(c, "session was end")
 			return
 		}
-		hasPermission := lo.Contains(claims.Permits, permitName)
+		if err := helper.VerifyJwtToken(token); err != nil {
+			helper.ResForbidden(c, err.Error())
+			return
+		}
+		payload, _ := helper.ParseToken(token)
+		hasPermission := lo.Contains(payload.Permits, permitName)
 		if !hasPermission {
 			helper.ResForbidden(c, "no permission access")
 			return
 		} else {
 			c.Next()
 		}
-	}
-}
-
-// Strategy: We validate permission on handler then compare permits on jwt payload
-func ValidatePermission(c *gin.Context) error {
-	authHeader := c.GetHeader("Authorization")
-	authorization := strings.Split(authHeader, " ")
-	claims := &helper.JwtPayload{}
-	if _, _, err := jwt.NewParser().ParseUnverified(authorization[1], claims); err != nil {
-		return err
-	}
-	stackName := stack.Caller(0).Frame().Function
-	hasPermission := lo.Contains(claims.Permits, stackName)
-	if hasPermission {
-		return nil
-	} else {
-		msg := "no permission access"
-		err := errors.New(msg)
-		helper.LogErr(err, stackName)
-		return err
+		c.Next()
 	}
 }
