# cmd/api/route/route.go
@@ -5,23 +5,27 @@ import (
 	"super-cms/internal/handler"
 
 	"github.com/gin-gonic/gin"
+	"github.com/redis/go-redis/v9"
 	"gorm.io/gorm"
 )
 
-func SetupRoute(db *gorm.DB, gin *gin.Engine) {
-	auth := mw.Authentication()
+func SetupRoute(db *gorm.DB, r *gin.Engine, redis *redis.Client) {
 	articleHandler := handler.NewArticleHandler(db)
-	authHandler := handler.NewAuthHandler(db)
+	authHandler := handler.NewAuthHandler(db, redis)
+	permits := func(permit string) gin.HandlerFunc {
+		return mw.AuthWithPermits(redis, permit)
+	}
 
 	// Auth Route
-	authRouter := gin.Group("/auth")
+	authRouter := r.Group("/auth")
 	authRouter.POST("/login", authHandler.Login)
+	authRouter.GET("/info", authHandler.UserInfo)
 
 	// Article Route
-	articleRouter := gin.Group("/articles")
-	articleRouter.GET("/:id", auth, mw.Permit("VIEW_ARTICLE_DETAIL"), articleHandler.GetByID)
-	articleRouter.GET("", auth, mw.Permit("VIEW_ARTICLE_LIST"), articleHandler.GetAll)
-	articleRouter.POST("", auth, mw.Permit("CREATE_ARTICLE"), articleHandler.Create)
-	articleRouter.PATCH("/:id", auth, mw.Permit("UPDATE_ARTICLE"), articleHandler.Update)
-	articleRouter.DELETE("/:id", auth, mw.Permit("DELETE_ARTICLE"), articleHandler.Delete)
+	articleRouter := r.Group("/articles")
+	articleRouter.GET("/:id", permits("VIEW_ARTICLE_DETAIL"), articleHandler.GetByID)
+	articleRouter.GET("", permits("VIEW_ARTICLE_LIST"), articleHandler.GetAll)
+	articleRouter.POST("", permits("CREATE_ARTICLE"), articleHandler.Create)
+	articleRouter.PATCH("/:id", permits("UPDATE_ARTICLE"), articleHandler.Update)
+	articleRouter.DELETE("/:id", permits("DELETE_ARTICLE"), articleHandler.Delete)
 }
